# wooshbot

./: LICENSE  README.md  stack.yaml  wooshbot.cabal
lib/: Wooshbot.hs
res/: config.yaml
