name:               wooshbot
version:            0.1.0.0
synopsis:           Responds to random comments on IRC with "woosh"
description:        See <https://xkcd.com/1627/>.
homepage:           https://github.com/pharpend/wooshbot
bug-reports:        https://github.com/pharpend/wooshbot/issues
license:            MIT
license-file:       LICENSE
author:             Peter Harpending
maintainer:         peter@harpending.org
copyright:          Copyright (c) 2016 Peter Harpending
category:           Network
build-type:         Simple
cabal-version:      >=1.10
stability:          Experimental
extra-source-files:
  LICENSE
  README.md

executable wooshbot
  hs-source-dirs:   src
  default-language: Haskell2010
  main-is:          Main.hs
  build-depends:
      base ==4.8.*
