name:               wooshbot
version:            0.1.0.0
synopsis:           Responds to random comments on IRC with "woosh"
description:        See <https://xkcd.com/1627/>.
homepage:           https://github.com/pharpend/wooshbot
bug-reports:        https://github.com/pharpend/wooshbot/issues
license:            MIT
license-file:       LICENSE
author:             Peter Harpending
maintainer:         peter@harpending.org
copyright:          Copyright (c) 2016 Peter Harpending
category:           Network
build-type:         Simple
cabal-version:      >=1.10
stability:          Experimental
extra-source-files:
  LICENSE
  README.md

source-repository head
  type:     git
  location: https://github.com/pharpend/wooshbot

library
  hs-source-dirs:   lib
  default-language: Haskell2010
  ghc-options:      -Wall
  other-modules:
    Paths_wooshbot
  exposed-modules:
    Wooshbot
  default-extensions:
    DeriveGeneric
    FlexibleInstances
    FunctionalDependencies
    MultiParamTypeClasses
    OverloadedStrings
    TemplateHaskell
  build-depends:
      base ==4.8.*
    , aeson >=0.10.0.0
    , bytestring
    , gitrev
    , irc-client
    , lens
    , text
    , yaml

executable wooshbot
  hs-source-dirs:   bin
  main-is:          Main.hs
  default-language: Haskell2010
  ghc-options:      -Wall -threaded
  build-depends:
      base ==4.8.*
